Release R1-1.1-0 / 14 May 2013

- Added newHtml(...) to create freeform HTML elements in a report.

- Added support for report citation information and Document Object Identifiers (DOIs).

- New report attribute "subtitle". A subtitle can be written/read using "set/getReportSubTitle(..).

- Logo section is no longer shown when no logos have been added to the report, effectively removing
  empty space above the title and below the meta data section.
  
- Nozzle now supports freeform HTML content with custom styles supplied through newHtml(...). 

- Various fixes.

-----------------


Release R1-1.0-0 / 8 January 2013

- Fully documented API.

- Changed Nozzle URL to http://www.github.com/parklab/Nozzle.

- Various minor fixes.

-----------------

Release R1-0.3-1 / 6 September 2012

- Nozzle 0.3-1 supports the inclusion of logos at the top and bottom of a report. Logos can be set
  using the setLogo( filename, location ) command. 

- Fixed a problem where tables that contain NAs caused an error during truncation.

-----------------

Release R1-0.3-0 / 20 January 2012

- Nozzle 0.3-0 no longer supports multiple reports per page and no longer generates HTML fragments.
  If an HTML fragment is requested a warning message will be printed.

- The default filename "report" has been replaced with "nozzle".

- Report usage can now be tracked with Google Analytics. A Google Analytics id can be set using
  setGoogleAnalyticsId() and retrieved using getGoogleAnalyticsId().

- Standard Nozzle reports now have a meta information section. Elements can be added with the
  addToMeta() command.
  
- Elements can now be added to the overview section with the addToOverview() command.

- Custom reports can now be created with the newCustomReport() command. Custom reports do not
  contain predefined sections.
  
- To add a meta information or a results section to a custom report newSection...() is called
  with with class="meta" or class="results", respectively.
