@@ -1,8 +1,8 @@
 Package: Nozzle.R1
 Type: Package
 Title: Nozzle Reports
-Version: 1.1-0
-Date: 2012-05-14
+Version: 1.1-1
+Date: 2012-05-15
 Author: Nils Gehlenborg <nils@hms.harvard.edu>
 Maintainer: Nils Gehlenborg <nils@hms.harvard.edu>
 Description: The Nozzle package provides an API to generate HTML reports with
